methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:20: error: ';' expected but ',' found.
  gauche();avance(),droite()
                   ^