methods.picture.PictureMono2.scala.code
def dessine() {
  baisseBrosse()
  leveBrosse()
}

def faireV() {
 	dessine()
  avance();gauche();avance()
  dessine()
  for (k <- 1 to 2) {
    droite()
    avance()
  }
  dessine()
  gauche() 
}

def faireDemiOvale(){
  dessine()
  gauche();avance(),droite()
  for (k <- 1 to 2){
  	avance()
  	dessine()
	}
  avance();droite();avance()
}

def faireOvale(){
  for(k <- 1 to 2){
    faireDemiOvale()
  }
}

def faireMotif()

override def run() {
}